Add --keep-monit-files option
Added not to delete existing monit files when install multiple jobs.

--- a/spec/assets/manifest.yml
+++ b/spec/assets/manifest.yml
@@ -2,8 +2,8 @@
 jobs:
   - name: legna
     template: angel
-  - name: dummy
-    template: angel
+  - name: yellows
+    template: yellows
 
 properties:
   miku:
