--- a/spec/assets/release/dev_releases/index.yml
+++ b/spec/assets/release/dev_releases/index.yml
@@ -4,3 +4,5 @@ builds:
     version: 0.1-dev
   9291b5edd9bf271e451cc276207040bbdc57cda2: 
     version: 1.1-dev
+  bbf4afbcf1914768f71d9ec8be924e8048d3798f: 
+    version: 1.2-dev
