Output the log of the packaging script when it failed

--- a/spec/assets/manifest.yml
+++ b/spec/assets/manifest.yml
@@ -4,6 +4,8 @@ jobs:
     template: angel
   - name: yellows
     template: yellows
+  - name: fail_job
+    template: fail_job
 
 properties:
   miku:
