--- a/spec/assets/release/dev_releases/index.yml
+++ b/spec/assets/release/dev_releases/index.yml
@@ -1,8 +1,10 @@
---- 
-builds: 
-  05246d7eb3ae87536edf078d052d8e77d1c587d5: 
+---
+builds:
+  05246d7eb3ae87536edf078d052d8e77d1c587d5:
     version: 0.1-dev
-  9291b5edd9bf271e451cc276207040bbdc57cda2: 
+  9291b5edd9bf271e451cc276207040bbdc57cda2:
     version: 1.1-dev
-  bbf4afbcf1914768f71d9ec8be924e8048d3798f: 
+  bbf4afbcf1914768f71d9ec8be924e8048d3798f:
     version: 1.2-dev
+  !binary "YTM2N2IxMGVhZWJjNGVjMmU2NmJhMTE5M2M4MTRmYzE3MjY4YjhkMA==":
+    version: 1.3-dev
